I added the index.html  of the project to the root to begin to work with it

--- a/zengarden/style-guide-template/index.html
+++ b/zengarden/style-guide-template/index.html
@@ -4,7 +4,7 @@
 	
 	<title>CSS Zen Garden: The Beauty of CSS Design</title>
 
-	<link rel="stylesheet" media="screen" href="/styles.237c716e.css">
+	<link rel="stylesheet" media="screen" href="./src/css/styles.css">
 	<link rel="alternate" type="application/rss+xml" title="RSS" href="http://www.csszengarden.com/zengarden.xml">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +16,7 @@
 	<!--[if lt IE 9]>
 	<script src="script/html5shiv.js"></script>
 	<![endif]-->
-<script src="/styles.237c716e.js"></script></head>
+</head>
 
 <!--
 
